[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://WallDetector.tscn" type="PackedScene" id=2]
[ext_resource path="res://Camera2D.gd" type="Script" id=3]
[ext_resource path="res://Camera2D2.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25, 50 )

[sub_resource type="GDScript" id=2]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
script = SubResource( 2 )

[node name="Left Wall Detector" parent="." instance=ExtResource( 2 )]
position = Vector2( -30, 0 )

[node name="Right Wall Detector2" parent="." instance=ExtResource( 2 )]
position = Vector2( 30, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2( 1.75, 1.75 )
drag_margin_h_enabled = false
drag_margin_v_enabled = false
drag_margin_left = 0.1
drag_margin_right = 0.1
script = ExtResource( 3 )

[node name="Rocket Cooldown Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="Camera2D2" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.75, 1.75 )
drag_margin_h_enabled = false
drag_margin_v_enabled = false
script = ExtResource( 4 )
max_translate_distance = 500

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="Left Wall Detector" to="." method="_on_wall_detector_entered"]
[connection signal="body_exited" from="Left Wall Detector" to="." method="_on_wall_detector_exited"]
[connection signal="body_entered" from="Right Wall Detector2" to="." method="_on_wall_detector_entered"]
[connection signal="body_exited" from="Right Wall Detector2" to="." method="_on_wall_detector_exited"]
[connection signal="timeout" from="Rocket Cooldown Timer" to="." method="_on_rocket_cooldown_timeout"]
[connection signal="timeout" from="Rocket Cooldown Timer" to="." method="_on_Rocket_Cooldown_Timer_timeout"]
[connection signal="timeout" from="Timer" to="Camera2D2" method="_on_Timer_timeout"]
